--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 
     <!-- Savings Dashboard -->
     <section id="dashboard">
-      <h2>Savings Dashboard</h2>
+      <h2>Enoch Savings Dashboard</h2>
       <p>Total Savings: <span id="totalSavings">0</span> Naira</p>
       <table>
         <thead>
